// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers Parse indy proof 1`] = `
ParsedIndyProof {
  "resolvedPredicates": Array [
    Object {
      "identifiers": Object {
        "credentialDefinitionId": "7KuDTpQh3GJ7Gp6kErpWvM:3:CL:712167:latest",
        "revocationRegistryId": undefined,
        "schemaId": "7KuDTpQh3GJ7Gp6kErpWvM:2:Faber College:1.0.0",
        "timestamp": undefined,
      },
      "name": "age",
      "predicateType": ">=",
      "predicateValue": 1,
    },
  ],
  "sharedAttributeGroups": Array [
    Object {
      "attributes": Array [
        Object {
          "name": "first_name",
          "value": "Aries",
        },
        Object {
          "name": "second_name",
          "value": "Bifold",
        },
      ],
      "identifiers": Object {
        "credentialDefinitionId": "7KuDTpQh3GJ7Gp6kErpWvM:3:CL:712167:latest",
        "revocationRegistryId": undefined,
        "schemaId": "7KuDTpQh3GJ7Gp6kErpWvM:2:Faber College:1.0.0",
        "timestamp": undefined,
      },
    },
  ],
  "sharedAttributes": Array [
    Object {
      "identifiers": Object {
        "credentialDefinitionId": "7KuDTpQh3GJ7Gp6kErpWvM:3:CL:712167:latest",
        "revocationRegistryId": undefined,
        "schemaId": "7KuDTpQh3GJ7Gp6kErpWvM:2:Faber College:1.0.0",
        "timestamp": undefined,
      },
      "name": "date",
      "value": "1/1/1",
    },
    Object {
      "identifiers": Object {
        "credentialDefinitionId": "7KuDTpQh3GJ7Gp6kErpWvM:3:CL:712168:latest",
        "revocationRegistryId": undefined,
        "schemaId": "7KuDTpQh3GJ7Gp6kErpWvM:2:Passport:1.0.0",
        "timestamp": undefined,
      },
      "name": "passport_no",
      "value": "123123",
    },
  ],
  "unresolvedAttributeGroups": Array [],
  "unresolvedAttributes": Array [],
  "unresolvedPredicates": Array [],
}
`;

exports[`Helpers Group shared proof data by credential 1`] = `
Map {
  "7KuDTpQh3GJ7Gp6kErpWvM:3:CL:712167:latest" => Object {
    "data": CredentialSharedProofData {
      "resolvedPredicates": Array [
        Object {
          "identifiers": Object {
            "credentialDefinitionId": "7KuDTpQh3GJ7Gp6kErpWvM:3:CL:712167:latest",
            "revocationRegistryId": undefined,
            "schemaId": "7KuDTpQh3GJ7Gp6kErpWvM:2:Faber College:1.0.0",
            "timestamp": undefined,
          },
          "name": "age",
          "predicateType": ">=",
          "predicateValue": 1,
        },
      ],
      "sharedAttributeGroups": Array [
        Object {
          "attributes": Array [
            Object {
              "name": "first_name",
              "value": "Aries",
            },
            Object {
              "name": "second_name",
              "value": "Bifold",
            },
          ],
          "identifiers": Object {
            "credentialDefinitionId": "7KuDTpQh3GJ7Gp6kErpWvM:3:CL:712167:latest",
            "revocationRegistryId": undefined,
            "schemaId": "7KuDTpQh3GJ7Gp6kErpWvM:2:Faber College:1.0.0",
            "timestamp": undefined,
          },
        },
      ],
      "sharedAttributes": Array [
        Object {
          "identifiers": Object {
            "credentialDefinitionId": "7KuDTpQh3GJ7Gp6kErpWvM:3:CL:712167:latest",
            "revocationRegistryId": undefined,
            "schemaId": "7KuDTpQh3GJ7Gp6kErpWvM:2:Faber College:1.0.0",
            "timestamp": undefined,
          },
          "name": "date",
          "value": "1/1/1",
        },
      ],
    },
    "identifiers": Object {
      "credentialDefinitionId": "7KuDTpQh3GJ7Gp6kErpWvM:3:CL:712167:latest",
      "revocationRegistryId": undefined,
      "schemaId": "7KuDTpQh3GJ7Gp6kErpWvM:2:Faber College:1.0.0",
      "timestamp": undefined,
    },
  },
  "7KuDTpQh3GJ7Gp6kErpWvM:3:CL:712168:latest" => Object {
    "data": CredentialSharedProofData {
      "resolvedPredicates": Array [],
      "sharedAttributeGroups": Array [],
      "sharedAttributes": Array [
        Object {
          "identifiers": Object {
            "credentialDefinitionId": "7KuDTpQh3GJ7Gp6kErpWvM:3:CL:712168:latest",
            "revocationRegistryId": undefined,
            "schemaId": "7KuDTpQh3GJ7Gp6kErpWvM:2:Passport:1.0.0",
            "timestamp": undefined,
          },
          "name": "passport_no",
          "value": "123123",
        },
      ],
    },
    "identifiers": Object {
      "credentialDefinitionId": "7KuDTpQh3GJ7Gp6kErpWvM:3:CL:712168:latest",
      "revocationRegistryId": undefined,
      "schemaId": "7KuDTpQh3GJ7Gp6kErpWvM:2:Passport:1.0.0",
      "timestamp": undefined,
    },
  },
}
`;

exports[`Helpers Get proof identifiers 1`] = `
Object {
  "credentialDefinitionId": "7KuDTpQh3GJ7Gp6kErpWvM:3:CL:712167:latest",
  "revocationRegistryId": undefined,
  "schemaId": "7KuDTpQh3GJ7Gp6kErpWvM:2:Faber College:1.0.0",
  "timestamp": undefined,
}
`;
